<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.search.MainActivity">


    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="-15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_weight="2"
                android:text="@string/unsure" />

            <EditText
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_weight="8"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:label="@string/app_name"
                android:maxLines="2"
                android:singleLine="true"
                tools:ignore="InvalidId" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_weight="2"
                android:text="@string/unsure" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_above="@id/line1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:clipChildren="false"/>

                    <LinearLayout
                        android:id="@+id/ll_dots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp">

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/frame"
                    android:layout_gravity="top"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/p01" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/p03" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/reconmmend"
                        android:layout_marginLeft="30dp"
                        android:textSize="25sp"/>
                    <ImageButton
                        android:id="@+id/recommend"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/bear" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:hint="@string/newone"
                        android:textSize="25sp"/>
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/p3" />

                </LinearLayout>


            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="主页"
                android:textStyle="bold" />

            <Button
                android:id="@+id/menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="商城"
                android:textStyle="bold" />

            <Button
                android:id="@+id/menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="我的"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <!--<LinearLayout-->
    <!--android:id="@+id/line1"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:orientation="horizontal"-->
    <!--android:background="#ffffff">-->

    <!--<Button-->
    <!--android:id="@+id/menu1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:layout_margin="3dp"-->
    <!--android:layout_weight="1"-->
    <!--android:text="主页"-->
    <!--android:textStyle="bold" />-->

    <!--<Button-->
    <!--android:id="@+id/menu2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:layout_margin="3dp"-->
    <!--android:layout_weight="1"-->
    <!--android:text="商城"-->
    <!--android:textStyle="bold" />-->

    <!--<Button-->
    <!--android:id="@+id/menu3"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:layout_margin="3dp"-->
    <!--android:layout_weight="1"-->
    <!--android:text="我的"-->
    <!--android:textStyle="bold" />-->
    <!--</LinearLayout>-->


</android.support.design.widget.CoordinatorLayout>

